--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,6 +71,12 @@
     <string name="enter_external_storage_button_text">Enter External Storage Activity</string>
     <string name="enter_sqlite_database_button_text">Enter Sqlite Database Activity</string>
 
+    <string name="load_shared_preference_button_text">Load Preference</string>
+    <string name="add_shared_preference_button_text">Add Preference</string>
+    <string name="shared_preference_key_edit_text_hint">Shared Preference Key</string>
+    <string name="shared_preference_value_edit_text_hint">Shared Preference Value</string>
+    <string name="shared_preference_text_view_default_text">Value will appear here</string>
+
     <string-array name="planets_array">
         <item>Mercury</item>
         <item>Venus</item>
