--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,6 +103,7 @@
     <string name="start_intent_service_result_receiver_button_text">Start Intent Service with Result Receiver</string>
     <string name="start_intent_service_broadcast_receiver_button_text">Start Intent Service with Broadcast Receiver</string>
     <string name="start_intent_service_alarm_manager_button_text">Start Intent Service with Alarm Manager</string>
+    <string name="begin_notifications_button_text">Begin Notifications</string>
 
     <string-array name="planets_array">
         <item>Mercury</item>
