--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,6 +104,7 @@
     <string name="start_intent_service_broadcast_receiver_button_text">Start Intent Service with Broadcast Receiver</string>
     <string name="start_intent_service_alarm_manager_button_text">Start Intent Service with Alarm Manager</string>
     <string name="begin_notifications_button_text">Begin Notifications</string>
+    <string name="begin_bound_service_button_text">Begin Bound Service</string>
 
 
     <string name="enter_networking_activity_button_text">Enter Network and Models Activity</string>
