--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -126,6 +126,7 @@
     <string name="include_default_text">This is a include layout with passed in user name: </string>
     <string name="first_name_hint_text">First name</string>
     <string name="last_name_hint_text">Last name</string>
+    <string name="age_hint_text">Age</string>
     <string name="click_me_button_text">Click me </string>
     <string name="click_me_listener_button_text">Click me for listener binding</string>
     <string name="imported_data_text">This text is using a imported data type</string>
